test_regress/t/t_inst_recurse_bad.out
%Error: t/t_inst_recurse_bad.v:17: Unsupported: Recursive multiple modules (module instantiates something leading back to itself): looped
        ... note: self-recursion (module instantiating itself directly) is supported.
%Error: Exiting due to
